--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
     "bootstrap": "^4.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "@types/datatables.net": "^1.10.19",
+    "@types/jquery": "^3.5.5",
+    "angular-datatables": "^11.0.2",
+    "datatables.net": "^1.10.23",
+    "datatables.net-dt": "^1.10.23",
+    "jquery": "^3.5.1"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
